src/index.css
@import "tailwindcss";
@plugin 'tailwind-scrollbar';

@theme {
  --font-audiowide: 'Audiowide', sans-serif;
  --color-primary: #575757;
  --color-secondary: #00206C;
}

#root {
  margin: 0;
  padding: 0;
}

.my-masonry-grid {
  display: -webkit-box; /* Not needed if autoprefixing */
  display: -ms-flexbox; /* Not needed if autoprefixing */
  display: flex;
  margin-left: -30px; /* gutter size offset */
  width: auto;
}
.my-masonry-grid_column {
  padding-left: 30px; /* gutter size */
  background-clip: padding-box;
}

/* Style your items */
.my-masonry-grid_column > img { /* change div to reference your elements you put in <Masonry> */
  margin-bottom: 30px;
}

